Fixed jukebox issue, made grays stingable and edible by lings

--- a/Resources/Prototypes/Catalog/Jukebox/Standard.yml
+++ b/Resources/Prototypes/Catalog/Jukebox/Standard.yml
@@ -102,7 +102,7 @@
 
 - type: jukebox
   id: ThrashardInTheCave
-  name: Sota Fujimori - Thrashard In The Cave: Stage 2 (Arrange Ver.)
+  name: Sota Fujimori - Thrashard In The Cave - Stage 2 (Arrange Ver.)
   path:
     path: /Audio/Jukebox/thrashard_in_the_cave.ogg
 
