--- a/Resources/Prototypes/Entities/Mobs/Species/gray.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/gray.yml
@@ -5,10 +5,11 @@
   id: BaseMobGray
   abstract: true
   components:
+  - type: Absorbable
   - type: Hunger
   - type: Thirst
   - type: Icon
-    sprite: Mobs/Species/Gray/parts.rsi # It was like this beforehand, no idea why.
+    sprite: Mobs/Species/Gray/parts.rsi
     state: full
   - type: Respirator
     damage:
