Added vulgarity to the list of allowed status effects for player characters.

--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -134,6 +134,7 @@
     - Flashed
     - RadiationProtection
     - Drowsiness
+    - Vulgarity
   - type: Body
     prototype: Human
     requiredLegs: 2
