--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
@@ -178,6 +178,7 @@
     - id: Shovel
     - id: FlashlightLantern
     - id: FireExtinguisher
+    - id: SurvivalKnife
 
 - type: entityTable
   id: SalvageEquipmentUncommon
@@ -188,10 +189,10 @@
     - id: PowerCellHighPrinted
     - id: RadioHandheld
     - id: ClothingBeltUtility
-    - id: SurvivalKnife
     - id: WeaponProtoKineticAccelerator
       weight: 0.5
     - id: OxygenTankFilled
+    - id: WelderIndustrial
     - !type:GroupSelector
       children:
       - id: ClothingHeadHatWelding
@@ -215,7 +216,9 @@
     - id: MiningDrill
     - id: ClothingEyesGlassesMeson
     - id: ClothingBeltSalvageWebbing
-    - id: ClothingOuterHardsuitSalvage
+    - id: SeismicCharge
+    - id: WeaponCrusher
+      weight: 0.5
     - !type:GroupSelector
       children:
       - id: JetpackBlue
@@ -225,8 +228,8 @@
   id: SalvageEquipmentLegendary
   table: !type:GroupSelector
     children:
-    - id: WeaponCrusher
     - id: WeaponCrusherGlaive
+    - id: ClothingOuterHardsuitSalvage
     - id: OmnizineChemistryBottle
     - !type:GroupSelector
       children:
