--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -351,11 +351,11 @@
           min: 50
 
 - type: reagent
-  id: Profanium
-  name: reagent-name-profanium
+  id: Profanol
+  name: reagent-name-profanol
   group: Toxins
-  desc: reagent-desc-profanium
-  physicalDesc: reagent-physical-desc-profanium
+  desc: reagent-desc-profanol
+  physicalDesc: reagent-physical-desc-pungent
   flavor: offensive
   color: "#BF5E5E"
   slippery: true
