attempt to fix credit for Shred

--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -81,7 +81,7 @@
 
 - files: ["shred.ogg"]
   license: "Custom"
-  copyright: "Shred by B. Bravo & Lean Rock."
+  copyright: "Shred by B. Bravo and Lean Rock."
   source: "https://youtube.com/watch?v=mD-8nkjWZbY"
 
 - files: ["morning_glow.ogg"]
