--- a/Resources/Maps/bagel.yml
+++ b/Resources/Maps/bagel.yml
@@ -6407,21 +6407,18 @@ entities:
             1: 136
           2,-4:
             1: 4369
-            0: 4
-            2: 52224
+            0: 52228
           2,-5:
             1: 4352
             0: 58379
           2,-3:
             1: 33825
-            2: 140
+            0: 140
           3,-4:
-            0: 52363
-            2: 13056
+            0: 65419
           3,-3:
-            2: 51
+            0: 35007
             1: 12288
-            0: 34956
           3,-1:
             1: 8739
             0: 34952
@@ -6749,10 +6746,10 @@ entities:
             0: 56797
           5,-8:
             0: 15359
-            3: 32768
+            2: 32768
           5,-7:
             0: 61491
-            3: 136
+            2: 136
           5,-6:
             0: 65535
           5,-5:
@@ -6763,9 +6760,9 @@ entities:
             0: 65311
           6,-8:
             0: 255
-            3: 28672
+            2: 28672
           6,-7:
-            3: 119
+            2: 119
             0: 61952
           6,-6:
             0: 61695
@@ -8017,7 +8014,7 @@ entities:
             0: 112
             1: 28672
           17,-7:
-            4: 1
+            3: 1
             1: 4104
           17,-6:
             1: 4593
@@ -8116,7 +8113,7 @@ entities:
           -13,7:
             1: 39312
           -12,8:
-            2: 12
+            4: 12
             6: 3072
           -11,5:
             0: 63351
@@ -8124,7 +8121,7 @@ entities:
             0: 4607
             1: 49152
           -11,8:
-            2: 1
+            4: 1
             1: 17476
             6: 256
           -11,7:
@@ -8359,7 +8356,7 @@ entities:
             1: 35033
             0: 12544
           -12,10:
-            4: 12
+            3: 12
             5: 3072
           -12,11:
             5: 12
@@ -8367,7 +8364,7 @@ entities:
             5: 257
             1: 17476
           -11,10:
-            4: 1
+            3: 1
             5: 256
             1: 17476
           -11,11:
@@ -8426,7 +8423,7 @@ entities:
           -13,12:
             1: 34952
             6: 48
-            2: 12288
+            4: 12288
           -12,13:
             1: 61455
           -13,13:
@@ -8523,7 +8520,7 @@ entities:
             0: 1
             1: 8738
             6: 128
-            2: 32768
+            4: 32768
           -17,12:
             0: 52232
           -16,13:
@@ -9000,21 +8997,6 @@ entities:
           - 0
           - 0
         - volume: 2500
-          temperature: 293.15
-          moles:
-          - 0
-          - 6666.982
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
           temperature: 235
           moles:
           - 21.824879
@@ -9036,6 +9018,21 @@ entities:
           - 0
           - 0
           - 6666.982
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          temperature: 293.15
+          moles:
+          - 0
+          - 6666.982
+          - 0
+          - 0
           - 0
           - 0
           - 0
@@ -9381,8 +9378,8 @@ entities:
           id: docking43669
           localAnchorB: -47.5,-40
           localAnchorA: 0.5,0
-          damping: 1560.1294
-          stiffness: 14003.688
+          damping: 1560.1519
+          stiffness: 14003.891
 - proto: AcousticGuitarInstrument
   entities:
   - uid: 2133
@@ -10507,6 +10504,18 @@ entities:
       - 24361
       - 24358
       - 9016
+  - uid: 24662
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 11.5,-14.5
+      parent: 60
+    - type: DeviceList
+      devices:
+      - 24659
+      - 24661
+      - 24665
+      - 24657
 - proto: AirAlarmElectronics
   entities:
   - uid: 13488
@@ -13731,6 +13740,16 @@ entities:
     - type: Transform
       pos: 49.5,-22.5
       parent: 60
+  - uid: 24659
+    components:
+    - type: Transform
+      pos: 12.5,-13.5
+      parent: 60
+    - type: DeviceNetwork
+      configurators:
+      - invalid
+      deviceLists:
+      - 24662
 - proto: AltarSpawner
   entities:
   - uid: 14509
@@ -14943,81 +14962,6 @@ entities:
     components:
     - type: Transform
       pos: -45.5,32.5
-      parent: 60
-  - uid: 24659
-    components:
-    - type: Transform
-      pos: 10.5,-11.5
-      parent: 60
-  - uid: 24660
-    components:
-    - type: Transform
-      pos: 10.5,-12.5
-      parent: 60
-  - uid: 24661
-    components:
-    - type: Transform
-      pos: 10.5,-13.5
-      parent: 60
-  - uid: 24662
-    components:
-    - type: Transform
-      pos: 11.5,-12.5
-      parent: 60
-  - uid: 24663
-    components:
-    - type: Transform
-      pos: 11.5,-11.5
-      parent: 60
-  - uid: 24664
-    components:
-    - type: Transform
-      pos: 12.5,-13.5
-      parent: 60
-  - uid: 24665
-    components:
-    - type: Transform
-      pos: 12.5,-12.5
-      parent: 60
-  - uid: 24666
-    components:
-    - type: Transform
-      pos: 12.5,-11.5
-      parent: 60
-  - uid: 24667
-    components:
-    - type: Transform
-      pos: 13.5,-13.5
-      parent: 60
-  - uid: 24668
-    components:
-    - type: Transform
-      pos: 13.5,-12.5
-      parent: 60
-  - uid: 24669
-    components:
-    - type: Transform
-      pos: 13.5,-11.5
-      parent: 60
-  - uid: 24670
-    components:
-    - type: Transform
-      pos: 11.5,-13.5
-      parent: 60
-  - uid: 24671
-    components:
-    - type: Transform
-      pos: 13.5,-10.5
-      parent: 60
-  - uid: 24672
-    components:
-    - type: Transform
-      pos: 11.5,-10.5
-      parent: 60
-  - uid: 24673
-    components:
-    - type: Transform
-      pos: 12.5,-10.5
       parent: 60
 - proto: AtmosFixOxygenMarker
   entities:
@@ -71962,6 +71906,11 @@ entities:
     - type: Transform
       pos: -26.46309,-14.295396
       parent: 60
+  - uid: 24664
+    components:
+    - type: Transform
+      pos: -0.5039121,2.9835286
+      parent: 60
 - proto: FoodBreadMoldySlice
   entities:
   - uid: 14544
@@ -72762,7 +72711,12 @@ entities:
     - type: Transform
       pos: 51.5,-18.5
       parent: 60
-  - uid: 24680
+  - uid: 24660
+    components:
+    - type: Transform
+      pos: 12.5,-8.5
+      parent: 60
+  - uid: 24663
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
@@ -91477,6 +91431,12 @@ entities:
       parent: 60
     - type: AtmosPipeColor
       color: '#FF1212FF'
+  - uid: 24666
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 12.5,-9.5
+      parent: 60
   - uid: 24679
     components:
     - type: Transform
@@ -96500,6 +96460,11 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 13.5,-12.5
       parent: 60
+    - type: DeviceNetwork
+      configurators:
+      - invalid
+      deviceLists:
+      - 24662
 - proto: GasVentScrubber
   entities:
   - uid: 61
@@ -97830,12 +97795,28 @@ entities:
       parent: 60
     - type: AtmosPipeColor
       color: '#FF1212FF'
-  - uid: 24678
+  - uid: 24661
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 10.5,-12.5
       parent: 60
+    - type: DeviceNetwork
+      configurators:
+      - invalid
+      deviceLists:
+      - 24662
+  - uid: 24665
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 12.5,-10.5
+      parent: 60
+    - type: DeviceNetwork
+      configurators:
+      - invalid
+      deviceLists:
+      - 24662
 - proto: GasVolumePump
   entities:
   - uid: 14850
