robust fixes for announcement issues

--- a/Resources/Prototypes/GameRules/meteorswarms.yml
+++ b/Resources/Prototypes/GameRules/meteorswarms.yml
@@ -109,8 +109,6 @@
     earliestStart: 2
     minimumPlayers: 0
   - type: MeteorSwarm
-    announcement: null
-    announcementSound: null
     nonDirectional: true
     meteors:
       MeteorSpaceDust: 1
@@ -129,8 +127,7 @@
     weight: 22
     minimumPlayers: 0
   - type: MeteorSwarm
-    announcement: station-event-space-dust-start-announcement
-    announcementSound: /Audio/Announcements/attention.ogg
+    startAnnouncement: true
     nonDirectional: true
     meteors:
       MeteorSpaceDust: 1
@@ -149,6 +146,7 @@
     weight: 18
     minimumPlayers: 15
   - type: MeteorSwarm
+    startAnnouncement: true
     meteors:
       MeteorSmall: 7
       MeteorMedium: 3
@@ -160,6 +158,7 @@
   - type: StationEvent
     weight: 10
   - type: MeteorSwarm
+    startAnnouncement: true
     meteors:
       MeteorSmall: 3
       MeteorMedium: 6
@@ -172,6 +171,7 @@
   - type: StationEvent
     weight: 5
   - type: MeteorSwarm
+    startAnnouncement: true
     meteors:
       MeteorSmall: 2
       MeteorMedium: 4
@@ -184,8 +184,7 @@
   - type: StationEvent
     weight: 0.05
   - type: MeteorSwarm
-    announcement: station-event-meteor-urist-start-announcement
-    announcementSound: /Audio/Announcements/attention.ogg
+    startAnnouncement: true
     meteors:
       MeteorUrist: 1
     waves:
