Added damage to pai so now its screen can crack, making it talk slightly funny.

--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -73,6 +73,35 @@
           Searching: { state: pai-searching-overlay }
           On: { state: pai-on-overlay }
   - type: StationMap
+  - type: Damageable
+    damageContainer: Silicon
+    damageModifierSet: Electronic
+  - type: DamageOnHighSpeedImpact
+    minimumSpeed: 0.2
+    damage:
+      types:
+        Blunt: 10
+  - type: MeleeSound
+    soundGroups:
+      Brute:
+        collection: GlassSmash
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 100
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/glass_crack2.ogg
+      - !type:DoActsBehavior
+        acts: [ "Breakage" ]
+  - type: DamageVisuals
+    thresholds: [100]
+    trackAllDamage: true
+    damageOverlay:
+      sprite: /Objects/Fun/pai.rsi
+  - type: Repairable
 
 - type: entity
   parent: [ PersonalAI, BaseSyndicateContraband]
@@ -134,6 +163,22 @@
   - type: Construction
     graph: PotatoAI
     node: potatoai
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 10
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/glass_crack2.ogg
+      - !type:DoActsBehavior
+        acts: [ "Breakage" ]
+  - type: DamageVisuals
+    thresholds: [10]
+    trackAllDamage: true
+    damageOverlay:
+      sprite: /Objects/Fun/pai.rsi
 
 - type: entity
   id: ActionPAIPlayMidi
