--- a/Resources/Prototypes/Entities/Structures/Wallmounts/surveillance_camera.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/surveillance_camera.yml
@@ -4,16 +4,22 @@
   name: camera
   description: A surveillance camera. It's watching you. Kinda.
   components:
-  - type: StationAiWhitelist
-  - type: ItemToggle
-    soundActivate:
-      path: /Audio/Machines/button.ogg
-    soundDeactivate:
-      path: /Audio/Machines/button.ogg
+  - type: Physics
+    bodyType: Static
+  - type: Fixtures
+    fixtures:
+      light:
+        shape:
+          !type:PhysShapeCircle
+          radius: 5
+        hard: false
+        mask:
+        - GhostImpassable
+  - type: LightOnCollide
+    fixtureId: light
   - type: PointLight
     enabled: false
     radius: 5
-  - type: ItemTogglePointLight
   - type: SlimPoweredLight
     enabled: false
   - type: StationAiVision
