Fixed partial repair for PotatoAI

--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -163,6 +163,8 @@
   - type: Construction
     graph: PotatoAI
     node: potatoai
+  - type: PAI
+    damageTillCracked: 10
   - type: Destructible
     thresholds:
     - trigger:
