--- a/Resources/Prototypes/Body/Organs/human.yml
+++ b/Resources/Prototypes/Body/Organs/human.yml
@@ -67,6 +67,10 @@
   - type: FlavorProfile
     flavors:
       - people
+  - type: FoodSequenceElement
+    entries:
+      burger: Brain
+      taco: Brain
   
 - type: entity
   id: OrganHumanEyes
