--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -939,6 +939,9 @@
   - type: Construction
     graph: CrabSteak
     node: cooked crab
+  - type: FoodSequenceElement
+    entries:
+      burger: CrabMeat
 
 - type: entity
   name: goliath steak
@@ -1358,7 +1361,8 @@
     node: cutlet
   - type: FoodSequenceElement
     entries:
-      burger: MeatCutletBurger
+      burger: MeatCutlet
+      taco: MeatCutlet
 
 - type: entity
   name: bear cutlet
@@ -1389,7 +1393,8 @@
     node: bear cutlet
   - type: FoodSequenceElement
     entries:
-      burger: BearCutletBurger
+      burger: BearCutlet
+      taco: BearCutlet
 
 - type: entity
   name: penguin cutlet
@@ -1418,7 +1423,8 @@
     node: penguin cutlet
   - type: FoodSequenceElement
     entries:
-      burger: PenguinCutletBurger
+      burger: PenguinCutlet
+      taco: PenguinCutlet
 
 - type: entity
   name: chicken cutlet
@@ -1447,7 +1453,8 @@
     node: chicken cutlet
   - type: FoodSequenceElement
     entries:
-      burger: ChickenCutletBurger
+      burger: ChickenCutlet
+      taco: ChickenCutlet
 
 - type: entity
   name: duck cutlet
@@ -1476,7 +1483,8 @@
     node: duck cutlet
   - type: FoodSequenceElement
     entries:
-      burger: DuckCutletBurger
+      burger: DuckCutlet
+      taco: DuckCutlet
 
 - type: entity
   name: lizard cutlet
@@ -1506,7 +1514,8 @@
     node: lizard cutlet
   - type: FoodSequenceElement
     entries:
-      burger: LizardCutletBurger
+      burger: LizardCutlet
+      taco: LizardCutlet
 
 - type: entity
   name: spider cutlet
@@ -1534,7 +1543,8 @@
     node: spider cutlet
   - type: FoodSequenceElement
     entries:
-      burger: SpiderCutletBurger
+      burger: SpiderCutlet
+      taco: SpiderCutlet
 
 - type: entity
   name: xeno cutlet
@@ -1562,4 +1572,5 @@
     node: xeno cutlet
   - type: FoodSequenceElement
     entries:
-      burger: XenoCutletBurger
+      burger: XenoCutlet
+      taco: XenoCutlet
