--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -167,7 +167,7 @@
     thresholds: [100]
     trackAllDamage: true
     damageOverlay:
-      sprite: /Objects/Fun/pai_potato.rsi
+      sprite: Objects/Fun/pai_potato.rsi
 
 - type: entity
   id: ActionPAIPlayMidi
