move chemical mutation to effect.

--- a/Resources/Prototypes/Hydroponics/randomMutations.yml
+++ b/Resources/Prototypes/Hydroponics/randomMutations.yml
@@ -102,3 +102,7 @@
       baseOdds: 0.00036
       persists: false
       mutation: !type:PlantMutateScream
+    - name: ChangeChemicals
+      baseOdds: 0.00018
+      persists: false
+      mutation: !type:PlantMutateChemicals
