--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1831,6 +1831,10 @@
     tags:
     - Fruit
     - Slice
+  - type: FoodSequenceElement
+    entries:
+      burger: WatermelonSliceBurger
+      taco: WatermelonSlice
 
 - type: entity
   name: grapes
