Integration testing doesn't like them slashes it seems.

--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -100,7 +100,7 @@
     thresholds: [100]
     trackAllDamage: true
     damageOverlay:
-      sprite: /Objects/Fun/pai.rsi
+      sprite: Objects/Fun/pai.rsi
   - type: Repairable
 
 - type: entity
