--- a/Resources/Prototypes/Hydroponics/randomMutations.yml
+++ b/Resources/Prototypes/Hydroponics/randomMutations.yml
@@ -106,3 +106,15 @@
       baseOdds: 0.00018
       persists: false
       mutation: !type:PlantMutateChemicals
+    - name: ChangeExudeGasses
+      baseOdds: 0.00091
+      persists: false
+      mutation: !type:PlantMutateExudeGasses
+    - name: ChangeConsumeGasses
+      baseOdds: 0.0036
+      persists: false
+      mutation: !type:PlantMutateConsumeGasses
+    - name: ChangeHarvest
+      baseOdds: 0.00036
+      persists: false
+      mutation: !type:PlantMutateHarvest
