--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -739,6 +739,9 @@
     tags:
     - Fruit
     - Vegetable
+  - type: FoodSequenceElement
+    entries:
+      skewer: TomatoSkewer
 
 - type: entity
   name: blue tomato
@@ -827,6 +830,9 @@
     tags:
     - Fruit # Fuck you they're a fruit
     - Vegetable
+  - type: FoodSequenceElement
+    entries:
+      skewer: TomatoSkewer
 
 - type: entity
   name: eggplant
