--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1856,6 +1856,7 @@
     entries:
       burger: WatermelonSliceBurger
       taco: WatermelonSlice
+      skewer: WatermelonSliceSkewer
 
 - type: entity
   name: grapes
