--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/skewer.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/skewer.yml
@@ -13,6 +13,29 @@
     layers:
     - state: skewer
     - map: ["foodSequenceLayers"]
+  - type: LandAtCursor
+  - type: Fixtures
+    fixtures:
+      fix1: 
+        shape: !type:PolygonShape
+          vertices:
+            - -0.40,-0.20
+            - -0.30,-0.30
+            - 0.50,0.10
+            - 0.40,0.20
+        density: 20
+        mask:
+        - ItemMask
+        restitution: 0.3
+        friction: 0.2
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Piercing: 6
+  - type: ThrowingAngle
+    angle: 245
+  - type: EmbeddableProjectile
+    offset: -0.15,0.0
   - type: MeleeWeapon
     wideAnimationRotation: -120
     damage:
