oopsie, ok, im go to sleep

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -1453,7 +1453,7 @@
     node: chicken cutlet
   - type: FoodSequenceElement
     entries:
-      burger: ChickenCutletBurger
+      burger: ChickenCutlet
       taco: ChickenCutlet
 
 - type: entity
